# calendar_bouncer

./: .gitignore  LICENSE  README.md  example.secrets.toml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/calendar_bouncer/: __init__.py  config.py  delete_permissions.py  main.py  sdk.py
tests/: test_package.py
